css: fix missing color dec in social media a

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,7 +240,7 @@ footer {
 .social-media a {
     text-decoration: none;
     color: var(--hue);
-    color:RGB(var(--hue-footer-icons));
+    color:rgb(var(--hue-footer-icons));
 }
 
 /* Quiz Outer Styling */
